# CaOS

./: .gitignore  Build.sh  CMakeLists.txt  README.md  disk.img
Source/BootSector/: bootloader.asm  enable_protected_mode.asm  error_handler.asm  protected_mode.asm
Source/BootSector/16bit/: boot_real.asm  disk_loader.asm  disk_real_service.asm  disk_service.asm  error_real_handler.asm  print_real_service.asm  print_service.asm  printhex_service.asm
Source/BootSector/32bit/: boot_protected.asm  detect_long_mode.asm  gdt32.asm  gdt_protected.asm  print32.asm  print_protected_service.asm
Source/BootSector/64bit/: gdt_long.asm
